<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/screen_back">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="@dimen/dimen_16dp">

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/cardUser"
                android:layout_width="130dp"
                android:layout_height="130dp"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/dimen_8dp"
                app:cardBackgroundColor="@android:color/transparent"
                app:cardCornerRadius="@dimen/dimen_10dp">

                <ImageView
                    android:id="@+id/imgUserProfile"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:scaleType="centerCrop"
                    android:src="@drawable/ic_user" />
            </com.google.android.material.card.MaterialCardView>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen_8dp"
                android:weightSum="0">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:fontFamily="@font/philosopher"
                    android:text="@string/txt_user_name"
                    android:textColor="@color/black"
                    android:textSize="@dimen/text_24sp" />

                <TextView
                    android:id="@+id/txtUserNameProfile"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="@font/philosopher"
                    android:textColor="@color/black"
                    android:textSize="@dimen/text_24sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen_8dp"
                android:weightSum="0">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:fontFamily="@font/philosopher"
                    android:text="@string/txt_email"
                    android:textColor="@color/black"
                    android:textSize="@dimen/text_24sp" />

                <TextView
                    android:id="@+id/txtEmailIDProfile"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="@font/philosopher"
                    android:textColor="@color/black"
                    android:textSize="@dimen/text_24sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen_8dp"
                android:orientation="horizontal"
                android:weightSum="0">

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btnLogout"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginRight="@dimen/dimen_4dp"
                    android:layout_weight="1"
                    android:backgroundTint="@color/colorPrimary"
                    android:fontFamily="@font/philosopher"
                    android:text="@string/txt_logout"
                    android:textColor="@color/white" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btnEditProfile"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginLeft="@dimen/dimen_4dp"
                    android:layout_weight="1"
                    android:backgroundTint="@color/colorPrimary"
                    android:fontFamily="@font/philosopher"
                    android:text="@string/txt_update"
                    android:textColor="@color/white" />

            </LinearLayout>

        </LinearLayout>
    </ScrollView>
</LinearLayout>